Bug 143332 - Error in Basic InStrRev function in case of case insensitive search
Summary: Error in Basic InStrRev function in case of case insensitive search
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
6.2 all versions
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.3.0 target:7.2.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-13 12:24 UTC by Andreas Heinisch
Modified: 2021-07-19 15:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Heinisch 2021-07-13 12:24:51 UTC
Description:
Run macro:

Option VBASupport 1

Sub TestInStrRevFunction()
  	MsgBox InStrRev("α", "Α")
End Sub

Steps to Reproduce:
Run the above macro.

Actual Results:
Result is 0.

Expected Results:
Result is 1. Arguments - Greek letter alpha (uppercase and lowercase)


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.5.2 (x64)
Build-ID: 1ec314fa52f458adc18c4f025c545a4e8b22c159
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 1 Buovjaga 2021-07-19 10:59:47 UTC
Repro

NixOS
Version: 7.1.4.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2021-07-19 11:04:00 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f5e030a343bec9f0f2c7b30e2dfb21ba5c94e5e8

tdf#143332 - Use utl::TextSearch to implement the InStrRev function

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2021-07-19 15:54:45 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/557905766a78fdadadb45f1faae282ae37594ff4

tdf#143332 - Use utl::TextSearch to implement the InStrRev function

It will be available in 7.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.