tdf#143332 - Use utl::TextSearch to implement the InStrRev function

Change-Id: I2dae038d061f036b3b7c0fbbcb6a821305d4839e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/119094
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit f5e030a343bec9f0f2c7b30e2dfb21ba5c94e5e8)