basic/qa/vba_tests/instrrev.vb
@@ -28,7 +28,14 @@ Sub verify_testInStrRev()
     SearchChar = "P"    ' Search for "P".
     TestUtil.AssertEqual(InStrRev(SearchString, SearchChar, 4, 1),   3, "InStrRev(SearchString, SearchChar, 4, 1)")
     TestUtil.AssertEqual(InStrRev(SearchString, SearchChar, -1, 0), 12, "InStrRev(SearchString, SearchChar, -1, 0)")
-    TestUtil.AssertEqual(InStrRev(SearchString, "W", 1),             0, "InStrRev(SearchString, ""W"", 1)")
+    TestUtil.AssertEqual(InStrRev(SearchString, "W", 1), 0, "InStrRev(SearchString, ""W"", 1)")
+
+    ' tdf#143332 - case-insensitive operation for non-ASCII characters
+    TestUtil.AssertEqual(InStrRev("α", "Α", -1, 1),      1, "InStrRev(""α"", ""Α"", -1, 1)")
+    TestUtil.AssertEqual(InStrRev("abc", "d", -1, 1),    0, "InStrRev(""abc"", ""d"", -1, 1)")
+    ' tdf#143332 - German Eszett is uppercased to a two-character 'SS'.
+    ' This test should fail after tdf#110003 has been fixed.
+    TestUtil.AssertEqual(InStrRev("Straße", "s", -1, 1), 5, "InStrRev(""Straße"", ""s"", -1, 1)")
 
     Exit Sub
 errorHandler:
